--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,8 @@
         <dependency>
             <groupId>simple-jndi</groupId>
             <artifactId>simple-jndi</artifactId>
-            <version>0.11.4.1</version>
+            <version>0.11.4</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
